# hexlet-django-blog

./: README.md  db.sqlite3  manage.py  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/article/: index.html
hexlet_django_blog/templates/: about.html  base.html  index.html
