[project]
name = "hexlet-django-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

package = [
  { include = "hexlet_django_blog" },
]

dependencies = [
    "django>=5.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
