[project]
name = "hexlet-django-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

package = [
  { include = "hexlet_django_blog" },
]

dependencies = [
    "django>=5.1.5",
    "django-bootstrap4>=25.1",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "uvicorn>=0.34.0",
]
